--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,16 @@ flutter:
    - assets/images/login1.png
    - assets/images/yesillik.png
    - assets/images/domates.png
+   - assets/images/diyalog.png
+   - assets/images/asci.png
+   - assets/images/yiyen.png
+   - assets/images/anonim.png
+   - assets/images/fatmanur.jpg
+   - assets/images/elif.jpg
+   - assets/images/yemek3.png
+   - assets/images/tatli.png
+   - assets/images/kampanya.png
+   - assets/images/return.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
